--- a/MLIP_simulations/README
+++ b/MLIP_simulations/README
@@ -1,2 +1,4 @@
-All simulations were performed using the 2 april 2025 version of LAMMPS with the MLIAP implementation of the MACE interface for LAMMPS, 
+All classical simulations were performed using the 2 april 2025 version of LAMMPS with the MLIAP implementation of the MACE interface for LAMMPS, 
 check https://mace-docs.readthedocs.io/en/latest/ for further information about training and compilation of the software and models.
+Quantum simulations used the ASE python library as a driver using version 3.22.1.
+Model training were performed using MACE 0.3.8 version.
